# coverage-badge

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  action.yml  typos.toml
.github/: labeler.yml
.github/workflows/: changelog.yaml  ci.yml  code-coverage.yaml  code-quality.yaml  coverage.yml  dependency-review.yaml  greeting.yaml  linting.yaml  release.yml  scorecard.yaml  security.yaml  testing.yaml  todo-pr-checker.yaml  todo-to-issue.yaml
docs/plans/: 2025-12-05-coverage-badge-design.md  2025-12-05-github-action-design.md  2025-12-05-github-action-implementation.md
src/: badge.rs  color.rs  lib.rs  main.rs
tests/: integration.rs
