[package]
name = "coverage-badge"
version = "0.1.0"
edition = "2021"
authors = ["Ozan Kaşıkçı <ozan@kasikci.io>"]
description = "Generate shields.io-style SVG badges for test coverage percentages"
license = "MIT"
repository = "https://github.com/yonasBSD/coverage-badge"
homepage = "https://github.com/yonasBSD/coverage-badge"
keywords = ["coverage", "badge", "svg", "testing", "ci"]
categories = ["command-line-utilities", "development-tools::testing"]
readme = "README.md"

[dependencies]
clap = { version = "4", features = ["derive"] }
